--- a/MyPluginControl.resx
+++ b/MyPluginControl.resx
@@ -273,6 +273,9 @@
         cYdl5qau11prrQra2PgfjORNOSG3j10AAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="richTextBox1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ExcelColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
