--- a/MyPluginControl.resx
+++ b/MyPluginControl.resx
@@ -273,9 +273,6 @@
         cYdl5qau11prrQra2PgfjORNOSG3j10AAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="richTextBox1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="instructionBox.Text" xml:space="preserve">
     <value>Data Import ++
 
@@ -283,16 +280,18 @@ Use this tool to import data from Excel to Dynamics.
 
 To get started:
 1.	Select Open Excel to select the file you want to import.
-2.	Use the sidebar to choose import options.
-3.	Map the rows in your input file to the Dynamics Entity.
-4.	Click Process fields to ensure all fields are correct.
-5.	Click Import data to being the import sequence.
+2.	Use the sidebar to Pick the Entity you want to import to.
+3.             Choose import options.
+4.	Map the rows in your input file to the Dynamics Entity.
+5.	Click Process fields to ensure all fields are correct.
+6.	Click Import data to being the import sequence.
 
 You can save and reuse your mapping files and settings. Click Save settings and select the location to save the XML file.
 
 To use a saved mapping file, first click Open Excel to specify the file you want to import, then select Load settings and choose the mapping file. NOTE: The Load settings function will not check that your Excel file matches the saved mapping, so ensure that it does match to avoid unexpected behaviour.
 
-More instructions: https://dynamics365tips.wixsite.com/home/post/xrmtoolbox-dataimport</value>
+More instructions: https://dynamics365tips.wixsite.com/home/post/xrmtoolbox-dataimport
+Source code: https://github.com/YesWeCandrew/XTBPlugins.DataImport</value>
   </data>
   <metadata name="ExcelColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -334,30 +333,6 @@ More instructions: https://dynamics365tips.wixsite.com/home/post/xrmtoolbox-data
     <value>True</value>
   </metadata>
   <metadata name="Logs.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="ExcelColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="isKey.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="IsLookup.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="lkpTargetEntity.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="lkpTargetfield.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Truevalue.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Falsevalue.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="DefaultValue.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="openFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
